--- a/incometax.css
+++ b/incometax.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Signika:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zain:wght@200;300;400;700;800;900&display=swap');
 *{
     margin: 0px;
     padding: 0px;
@@ -11,6 +12,7 @@
 @media only screen and (max-width: 960px) {
     .mainscreen .taxbox{
         flex-direction: column;
+        
     }
 
     .taxbox .form{
@@ -28,22 +30,35 @@
         
         width: 100%;
     }
+    .navigation .navborderoverlay{
+        width: 100%;
+    }
 
 }
  
 @media only screen and (max-width: 480px){
     html:root {
         font-size: 55%;
+        overflow-y: auto;
+    }
+    body .navbar{
+        height: 62px;
     }
     body .mainscreen{
-        
         width: 100%;
     }
     .headingbox h2{
-        width: 241px;
+        width: 230px;
         text-align: left;
     }
+    .mainscreen .headingbox h1{
+        font-size: 22px;
+    }
+    .mainscreen .headingbox h1 span{
+        font-size: 22px;
+    }
     .mainscreen .headingbox{
+        width: 100vw;
         /* background-color: crimson; */
         display: flex;
         flex-direction: column;
@@ -52,39 +67,74 @@
     }
     .mainscreen .taxbox{
         width: 100%;
-        height: 40%;
+        /* background-color: crimson; */
+        display: block;
+        
+    }
+    .taxbox .form{
+        border: none;
+
     }
     .taxbox .finaltax{
+        width: 100%;
+        height: auto;
         display: flex;
         align-items: center;
+        margin-bottom: 4rem;
+    }
+    .finaltax .finaltaxbox{
+        box-shadow: none;
+        border: none;
+        height: 26rem;
     }
     .finaltax .calculatebutton{
         margin-top: 4rem;
-        width: 40%;
-        height: 6.2rem;
-        margin-bottom: 6rem;
+        width: 148px;
+        height: 47px;
+        margin-bottom: 4rem;
+        /* background-color: red; */
     }
-    .navbar .ri-menu-2-line{
+    .navbar #menu{
         display: block;
         font-size: 3rem;
         margin-left: 2rem;
+        z-index: 1000;
     }
     body .navbar{
         width: 100%;
     }
     .navbar #logo{
-        margin-right: 0.8rem;
-    
+        margin-right: 0.15rem;
     }
     .p1 .navigation{
+        background-color: #F7F8FA;
+        z-index: 700;
+        width: 60vw;
         display: none;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+    }
+    .p1 .overlay{
+        z-index: 600;
+        position: absolute;
+        
     }
     form .content div{
         font-size: 1.65rem;
     }
+
+    .calculations div{
+        padding: 0rem 1.7rem 0rem 1.7rem;
+    }
+    .calculations div .amm{
+        font-size: 1.6rem;
+    }
+    .result h2{
+        font-size: 1.5rem;
+    }
 }
 html{
     font-size: 10px;
+    overflow-y: hidden;
 }
 body{
     
@@ -141,6 +191,8 @@ nav ul li a{
     top: 0%;
     display: flex;
     flex-direction: row;
+    /* background-color: crimson; */
+
 }
 
 .navigation{
@@ -153,28 +205,52 @@ nav ul li a{
 
 .textmenu{
     width: 19.1rem;
-    height: 15.1rem;
+    height: 16rem;
     display: flex;
     flex-direction: column;
     position: relative;
     top: 12.8rem;
     margin-left: 23.2%;
-    justify-content: center;
-}
 
+    
+}
+.navborderoverlay{
+    width: calc(100% - 50px);
+    height: 100%;
+    border-right: 4px solid black;
+    background-color: #0d1221;
+}
+.textmenu ul{
+    height: 100%;
+}
 .textmenu ul li{
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+
 }
 
 .textmenu ul li a{
     text-decoration: none;
-    font-size: 1.8rem;
-    color: #454545;
+    font-size: 2.2rem;
+    color: rgb(172, 172, 172);
     margin: 0.5rem;
+    font-family: "Zain", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
+#three{
+    color: rgb(240, 240, 240);
+}
+.overlay{
+    width: 100vw;
+    height: 100vh;
+    display: block;
 
+}
 .mainscreen{
+    position: absolute;
     width: 75.3%;
     height: 100%;
     display: flex;
@@ -191,7 +267,7 @@ nav ul li a{
 }
 
 .headingbox h2{
-    margin-top: 2.7rem;
+    margin-top: 2.3rem;
     font-family: "Ubuntu", sans-serif;
     font-weight: 500;
     color: #797979;
@@ -201,21 +277,30 @@ nav ul li a{
 
 .headingbox h1{
     font-size: 2.8rem;
-    color: #252525;
+    color: #667ab5;
     font-family: "Ubuntu", sans-serif;
 }
 .headingbox h1 span{
     font-size: 2.8rem;
-    color: #3357E5;
+    color: #353948;
     font-family: "Ubuntu", sans-serif;
+}
+.headingbox h3{
+    font-size: 1.8rem;
+    margin-top: 1.3rem;
+    color: rgb(113, 113, 119);
+    width: 70%;
+    font-family: "Zain", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .taxbox{
-    width: calc(100% - 9.8rem);
+    width: calc(100%);
     margin-top: 1.5rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:space-between;
     height: 100%;
     /* background-color: #3357E5; */
 }
@@ -242,7 +327,7 @@ nav ul li a{
     height: 6rem;
     font-weight: 400;
     font-style: normal;
-    color: #252525;
+    color: #606060;
     border-bottom: 1px solid #ddd;
 }
 
@@ -250,19 +335,6 @@ nav ul li a{
     font-size: 2.2rem;
 }
 
-.content div{
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.55rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    color: #252525;
-    font-weight: 400;
-    font-style: normal;
-}
 
 .content {
     display: none;
@@ -272,19 +344,61 @@ nav ul li a{
     padding: 1rem;
     
 }
-
+.content div{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.55rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #75787d;
+    font-weight: 400;
+    font-style: normal;
+}
+.content div input{
+    border: none;
+    text-align: right;
+    width: 100px;
+    height: 22px;
+    font-size: 14.5px;
+    border-bottom: 1.5px solid rgb(123, 123, 123);
+    background-color: #F7F8FA;
+    padding-right: 2px;
+    color: #6f7071;
+    font-weight: 600;
+}
+.content div select{
+    border: none;
+    text-align: center;
+    width: 115px;
+    height: 22px;
+    font-size: 14.5px;
+    border: 1.5px solid rgb(123, 123, 123);
+    background-color: #F7F8FA;
+    border-radius: 3px;
+    /* padding-right: 2px; */
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
 .content-clicked{
     display: block;
 }
 
 form h3{
-    font-size: 1.8rem;
+    font-size: 1.55rem;
     margin: 2rem 0rem 2rem 0rem;
+    font-weight: 500;
 }
 
 .finaltax{
     width: 35%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     
@@ -293,14 +407,14 @@ form h3{
 .calculatebutton{
     width: 100%;
     height: 5rem;
-
-    box-shadow: rgba(57, 87, 229, 0.4) 0px 5px, rgba(57, 87, 229, 0.3) 0px 10px, rgba(57, 87, 229, 0.2) 0px 15px, rgba(57, 87, 229, 0.1) 0px 20px, rgba(57, 87, 229, 0.05) 0px 25px;
+    
+    box-shadow: rgba(16, 22, 43, 0.4) 0px 5px, rgba(16, 22, 43, 0.3) 0px 10px, rgba(16, 22, 43, 0.2) 0px 15px, rgba(16, 22, 43, 0.1) 0px 20px, rgba(16, 22, 43, 0.05) 0px 25px;
     border-radius: 8px;
 }
 .calculatebutton button{
     width: 100%;
     height: 100%;
-    background-color: #3357E5;
+    background-color: #10162B;
     font-size: 1.6rem;
     font-family: "Ubuntu", sans-serif;
     font-weight: 600;
@@ -309,25 +423,24 @@ form h3{
 }
 .finaltaxbox{
     width: 100%;
-    height: 26.8rem;
+    height: 28rem;
     display: flex;
     flex-direction: column;
     border: 1px solid rgba(0, 0, 0, 0.073);
     box-shadow: rgba(0, 0, 0, 0.1)0px 4px 12px;
+    padding-bottom: 0.8rem;
 }
 
 .calculations{
     width: 100%;
     height: 40%;
-    /* padding: 4%; */
 }
 
 .calculations div{
     display: flex;
     justify-content: space-between;
 }
-
-.bmm, .amm, .ammb{
+.amm{
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 1.3rem;
@@ -339,15 +452,6 @@ form h3{
     font-variation-settings:
     "GRAD" 0;
     color: #797979;
-}
-
-.ammb{
-    font-family: "Signika", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-variation-settings:
-    "GRAD" 0;
 }
 
 .result{
